--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 
   <head>
@@ -9,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
   </head>
 
   <body>
@@ -17,7 +19,7 @@
       <header id="header">
         <div class="container">
           <div class="header ficb">
-            <a href="/"><img src="img/logo.svg" alt="logo" class="logo"></a>
+            <a href="/"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo"></a>
             <nav>
               <ul class="menu ficc">
                 <li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
@@ -37,7 +39,7 @@
               </p>
               <button class="btn banner__btn">Подобрать букет</button>
             </div>
-            <img src="img/bannerImg.png" alt="banner Img" class="banner__img">
+            <img src="{% static 'img/bannerImg.png' %}" alt="banner Img" class="banner__img">
           </div>
         </div>
       </section>
@@ -89,7 +91,7 @@
                 <a href="tel:89113966682" class="contacts__block_tel">8 (911) 39 66 682</a>
               </div>
             </div>
-            <img src="img/contactsImg.jpg" alt="contactsImg" class="contacts__img">
+            <img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
             <div class="contacts__map">
               <script type="text/javascript" charset="utf-8" async
                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
@@ -114,7 +116,7 @@
     <footer id="footer">
       <div class="container">
         <div class="footer">
-          <a href="/"><img src="img/logo.svg" alt="logo" class="logo footer__logo"></a>
+          <a href="/"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
           <nav>
             <ul class="menu footer__menu ficc">
               <li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
