--- a/templates/index.html
+++ b/templates/index.html
@@ -42,24 +42,17 @@
     <div class="recommended p100">
       <div class="title">Рекомендуем</div>
       <div class="recommended__elems ficb">
+
+        {% for bouquet in bouquets|slice:":3" %}
         <div class="recommended__block recommended__block_first">
-          <div class="recommended__block_elems ficb">
-            <span class="recommended__block_intro">Летнее утро</span>
-            <span class="recommended__block_price">3 600 руб</span>
+          <div class="recommended__block">
+            <span class="recommended__block_intro">{{ bouquet.name }}</span>
+            <span class="recommended__block_price">{{ bouquet.price }} руб</span>
+            <img class="recommended__block_img" src="{{ bouquet.image.url }}">
           </div>
         </div>
-        <div class="recommended__block recommended__block_sec">
-          <div class="recommended__block_elems ficb">
-            <span class="recommended__block_intro">Зимняя сказка</span>
-            <span class="recommended__block_price">4 100 руб</span>
-          </div>
-        </div>
-        <div class="recommended__block recommended__block_thr">
-          <div class="recommended__block_elems ficb">
-            <span class="recommended__block_intro">Нежный</span>
-            <span class="recommended__block_price">2 900 руб</span>
-          </div>
-        </div>
+        {% endfor %}
+
       </div>
       <!-- <button class="btn recommended__btn">Показать всю коллекцию</button> -->
       <button onclick="location.href='{% url 'catalog' %}'" class="btn recommended__btn">Показать всю коллекцию</button>
@@ -91,7 +84,9 @@
             src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
       </div>
-      <button class="btn contacts__btn">Заказать доставку</button>
+      <!-- <form action="#banner"> -->
+        <button onclick="location.href='#banner'" class="btn contacts__btn">Заказать доставку</button>
+      <!-- </form> -->
     </div>
   </div>
 </section>
