--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -6,13 +6,14 @@
 <section id="singUpConsultation">
   <div class="container">
     <div class="singUpConsultation">
-      <form action="#" class="singUpConsultation__form">
+      <form action="" class="singUpConsultation__form">
+        {% csrf_token %}
         <div class="title">Запись на консультацию</div>
-        <input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
-        <input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
+        {{ form.name }}
+        {{ form.phone }}
         <div class="chekbox fic">
           <input type="checkbox" class="singUpConsultation__ckekbox" checked required>
-          <span class="chekbox__intro">Я согласен(а) с политикой конфидециоальности</span>
+          <span class="chekbox__intro">Я согласен(а) с политикой конфидециоальности и обработкой перс.данных</span>
         </div>
         <button class="btn singUpConsultation__form_btn">Отправить</button>
       </form>
