--- a/templates/payment_result.html
+++ b/templates/payment_result.html
@@ -8,7 +8,7 @@
     <div class="singUpConsultation">
         <div class="singUpConsultation__form">
         {% if result %}
-            <div class="title">Ваш заказ №{{ order.id }} успешно оплачен</div>
+            <div class="title">Ваш заказ №{{ order }} успешно оплачен</div>
         {% else %}
             <div class="title">Возникла проблема с оплатой заказа №{{ order.id }}</div>
         {% endif %}
