--- a/templates/base.html
+++ b/templates/base.html
@@ -41,15 +41,7 @@
       <div class="container">
         <div class="consultation">
           <div class="title consultation__title">Оставьте заявку на консультацию</div>
-          <form action="/consultation" class="consultation__form" method="POST">
-              {% csrf_token %}
-              {{ form }}
-            <button type="submit" class="consultation__form_btn">Отправить</button>
-            <div class="chekbox fic">
-              <input type="checkbox" class="singUpConsultation__ckekbox" checked required>
-              <span class="chekbox__intro">Я согласен(а) с <a href="{% static 'files/privacy_policy.pdf' %}" target="_blank">политикой конфидециоальности и обработкой перс.данных</a></span>
-            </div>
-          </form>
+            {% include 'consultation_form.html' %}
         </div>
       </div>
     </section>
@@ -77,6 +69,7 @@
     {% endblock %}
 
     {% block script %}
+       <script src="{% static 'js/phone-autoformat.js'%}"></script>
     {% endblock %}
 
   </body>
