--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -15,8 +15,8 @@
           </div>
         {% endfor %}
 
-        <button class="btn largeBtn catalog__btn">Показать ещё</button>
       </div>
+      <!-- <button class="btn largeBtn catalog__btn">Показать ещё</button> -->
     </div>
   </div>
 </section>
