--- a/templates/quiz-step.html
+++ b/templates/quiz-step.html
@@ -14,11 +14,11 @@
       <div class="quiz__block">
         <h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
         <div class="quiz__elems fic">
-          <form action="{% url 'result'%}">
-            <button class="quiz__elem" type="submit">До 1 000 руб</button>
-            <button class="quiz__elem" type="submit">1 000 - 5 000 руб</button>
-            <button class="quiz__elem" type="submit">от 5 000 руб</button>
-            <button class="quiz__elem" type="submit">Не имеет значения</button>
+          <form action="{% url 'result'%}" method="GET">
+            <button class="quiz__elem" type="submit" name="price" value="1000">До 1 000 руб</button>
+            <button class="quiz__elem" type="submit" name="price" value="5000">1 000 - 5 000 руб</button>
+            <button class="quiz__elem" type="submit" name="price" value="5000+">от 5 000 руб</button>
+            <button class="quiz__elem" type="submit" name="price" value="None">Не имеет значения</button>
           </form>
         </div>
         <div class="quiz__progress">
