Add logic check payment

--- a/templates/payment_result.html
+++ b/templates/payment_result.html
@@ -8,11 +8,13 @@
     <div class="singUpConsultation">
         <div class="singUpConsultation__form">
         {% if result %}
-            <div class="title">Ваш заказ №{{ order.id }} успешно оплачен! Спасибо за заказ.</div>
+            <div class="title">Ваш заказ №{{ order.id }} успешно оплачен! <br>
+              Спасибо за заказ.</div>
         {% else %}
             <div class="title">
-              Возникла проблема с оплатой заказа №{{ order.id }}!
-              Пожалуйста, обновите страницу чуть позже, дождитесь финального статуса оплаты. Спасибо.
+              Возникла проблема с оплатой заказа №{{ order.id }}! <br>
+              Пожалуйста, обновите страницу чуть позже, дождитесь финального статуса оплаты. <br>
+              Если Вы не оплачивали заказ, пожалуйста, создайте его заново. Спасибо.
             </div>
         {% endif %}
         </div>
